    - Change bugreport.cgi to use Debbugs::Log and greately simplify the
      process of outputing the bug log.
    - All RFC1522 subject lines are decoded, both in the html information
      and the message headers. All messages are converted to UTF-8 whereever
      possible; all bugreport.cgi pages are now completely in UTF-8 to the
      degree possible. (closes: #46848, #238984)
    - Add a convert_to_utf8 function to Debbugs::Mime to make the above
      possible; abstracts functionality that was already present in the
      decode_rfc1522 fucntionality.
    - Individual messages can now be downloaded from each bug report
      (closes: #95373)
    - Uninteresting headers are now hidden by default, can be renabled
      with &trim=no (closes: #188561)
    - Fix postfix instructions in README.mail (thanks to Jeff Teunissen)
      (closes: #134166)
    - Display old severity when changing severity (closes: #196947)

 -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100

debbugs (2.4.1) unstable; urgency=low

  * Colin Watson:
    - Exit the CGI scripts straight away if the HTTP method is HEAD, to save
      pointless work.
    - Display pending+fixed bugs as "fixed in NMU", not "pending upload".
    - Add a man page for debbugsconfig.
    - Report original tags when changing them, closes: #170630.
    - Add missing <ul></ul> tags to db2html's output, closes: #50746.
    - Add a 'submitter' command to service, based on a patch by Matt Kraai.
    - Remove the final use of cgi-lib.pl, so it's gone. Remove copyright
      notices that were there due to using it.
    - Accept ';' as well as '&' as a CGI argument separator.
    - db2html now works with the new hashed database layout.
    - Disable the fixed severity in favour of the tag.
    - MIME-encoded messages to bugs are displayed in decoded form on the web
      interface (unless the "mime=no" parameter is used), closes: #136114.
    - Add facility to search by tag.